--- a/TestProduct/Base.lproj/Main.storyboard
+++ b/TestProduct/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="afT-0b-AAV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="afT-0b-AAV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,8 +14,22 @@
                     <view key="view" contentMode="scaleToFill" id="NLS-Ln-aKK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sV9-te-r6E">
+                                <rect key="frame" x="248" y="230" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="sV9-te-r6E" firstAttribute="leading" secondItem="Bdi-ZR-YFf" secondAttribute="leading" constant="248" id="6Bl-Qw-dWV"/>
+                            <constraint firstItem="Bdi-ZR-YFf" firstAttribute="bottom" secondItem="sV9-te-r6E" secondAttribute="bottom" constant="611" id="90b-lD-Za4"/>
+                            <constraint firstItem="Bdi-ZR-YFf" firstAttribute="trailing" secondItem="sV9-te-r6E" secondAttribute="trailing" constant="124" id="ja7-rr-Ugd"/>
+                            <constraint firstItem="sV9-te-r6E" firstAttribute="top" secondItem="Bdi-ZR-YFf" secondAttribute="top" constant="186" id="vyx-ki-5Ex"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bdi-ZR-YFf"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XTw-SF-abF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -24,9 +37,4 @@
             <point key="canvasLocation" x="-197" y="116"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
